--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -3733,6 +3733,17 @@ video.pgi-video {
   height: 100%;
   object-fit: cover;
 }
+iframe.pgi-video {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 /* Portfolio grid item caption 
 =============================== */
