--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1939,10 +1939,10 @@ body:not(.tt-boxed) .page-header-inner,
   bottom: 0;
   width: 100%;
   height: 100%;
-  object-fit: contain;
-  object-position: 50% 50%;
+  object-fit: cover;
+  object-position: 100% 70%;
   background-color: transparent;
-  animation: animation_brand 5s infinite linear;
+  /* animation: animation_brand 5s infinite linear; */
 }
 @keyframes animation_brand {
   from {
@@ -3768,7 +3768,7 @@ iframe.pgi-video {
   font-size: calc(19px + 1.5vw);
   font-weight: bold;
   font-weight: 600;
-  color: black;
+  color: white;
   line-height: 1.5;
 }
 @media (max-width: 767px) {
@@ -3811,7 +3811,7 @@ iframe.pgi-video {
   position: relative;
   display: inline-block;
   font-size: calc(13px + 0.1vw);
-  color: black;
+  color: white;
   opacity: 0.5;
 }
 .pgi-category ~ .pgi-category {
