--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -3745,8 +3745,8 @@ iframe.pgi-video {
   left: 0;
   overflow: hidden;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 100% !important;
+  object-fit: fill;
 }
 
 /* Portfolio grid item caption 
