--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -5874,7 +5874,7 @@ video.tt-pci-video {
   bottom: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fill;
   object-position: 50% 50%;
 }
 
