--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -88,7 +88,7 @@ a {
   padding: 200px !important;
 }
 .anim-fadeinup > p {
-  font-size: 25px !important;
+  font-size: 16px !important;
 }
 .custom-image img {
   position: absolute;
@@ -130,5 +130,45 @@ h2,
 h3,
 h4,
 h5 {
+  font-family: grandslang !important;
+}
+.tt-scrolling-text-inner {
+  font-family: grandslang !important;
+}
+@font-face {
+  font-family: gilroyregular;
+  src: url("/assets/font/SVN-Gilroy\ Regular.otf");
+}
+body {
+  /* font-family: "Poppins", sans-serif; */
+  font-size: 16px !important;
+}
+.tt-main-menu,
+.ph-caption-title-ghost,
+.ph-caption-subtitle,
+.scroll-down-circle,
+.made-with-love,
+.tt-ol-menu-toggle-btn-text,
+.tt-m-menu-toggle-btn-text,
+.tt-ol-menu-list,
+.tt-heading,
+.tt-btn,
+.social-buttons,
+.footer-social,
+.tt-ps-nav-pagination,
+.tt-pc-navigation,
+.tt-cc-pagination,
+.pli-counter,
+.ttgr-cat-trigger-wrap,
+.ttgr-cat-list,
+.portfolio-interactive-item,
+.tt-copyright,
+.project-info-list,
+.tt-pn-subtitle,
+.ph-share-ghost,
+.tt-pagination {
+  font-family: gilroyregular !important;
+}
+.tt-pn-link {
   font-family: grandslang !important;
 }
