--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1982,24 +1982,53 @@ body:not(.tt-boxed) .page-header-inner,
   bottom: -1px;
   left: 0;
   width: 100%;
-  height: 35vh;
-  z-index: 3;
+  height: 100%;
+  opacity: 0.4 !important;
+  z-index: 2;
   pointer-events: none;
   background: rgb(13, 13, 13);
   background: -moz-linear-gradient(
     0deg,
     rgba(13, 13, 13, 1) 0%,
-    rgba(13, 13, 13, 0) 100%
+    rgba(221, 218, 218, 0) 100%
   );
   background: -webkit-linear-gradient(
     0deg,
     rgba(13, 13, 13, 1) 0%,
-    rgba(13, 13, 13, 0) 100%
+    rgba(221, 218, 218, 0) 100%
   );
   background: linear-gradient(
     0deg,
     rgba(13, 13, 13, 1) 0%,
-    rgba(13, 13, 13, 0) 100%
+    rgba(221, 218, 218, 0) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0d0d0d",endColorstr="#0d0d0d",GradientType=1);
+}
+#page-header > .page-header-inner > .ph-image-shadow:after {
+  position: absolute;
+  content: "";
+  bottom: -1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5 !important;
+  z-index: 2;
+  pointer-events: none;
+  background: rgb(13, 13, 13);
+  background: -moz-linear-gradient(
+    0deg,
+    rgba(13, 13, 13, 1) 0%,
+    rgba(117, 117, 117, 0) 100%
+  );
+  background: -webkit-linear-gradient(
+    0deg,
+    rgba(13, 13, 13, 1) 0%,
+    rgba(117, 117, 117, 0) 100%
+  );
+  background: linear-gradient(
+    0deg,
+    rgba(13, 13, 13, 1) 0%,
+    rgba(117, 117, 117, 0) 100%
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0d0d0d",endColorstr="#0d0d0d",GradientType=1);
 }
