--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -190,11 +190,13 @@ body {
 }
 .anim-fadeinup {
   font-size: 16px !important;
-  text-align: center !important;
 }
 .anim-fadeinup > .tt-accordion-heading {
   text-align: left !important;
 }
 .anim-fadeinup > .tt-accordion-content {
   text-align: left !important;
+}
+.text-center {
+  text-align: center !important;
 }
