--- a/assets/css/custom1.css
+++ b/assets/css/custom1.css
@@ -39,14 +39,14 @@ Author              : EsensiFiksi
   background-color: #259b97;
 }
 
-/* .over-all {
+.over-all {
   width: 100%;
   height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 90;
-  background: #fff;
+  background: black;
   mix-blend-mode: color;
   pointer-events: none;
   opacity: 0;
@@ -65,7 +65,7 @@ Author              : EsensiFiksi
 .spinning {
   width: 100px;
   height: 100px;
-  background: url("../img/img/AlphaCreative_Border.svg") no-repeat center center;
+  background: url("../img/AlphaCreative_Border.svg") no-repeat center center;
   border: 0;
   -webkit-animation-name: spin;
   animation-name: spin;
@@ -83,7 +83,7 @@ Author              : EsensiFiksi
   height: 100vh;
   bottom: 0;
   left: 0;
-  background: #fff;
+  background: black;
   position: fixed;
   z-index: 998;
 }
@@ -93,7 +93,7 @@ Author              : EsensiFiksi
   height: 100vh;
   top: 0;
   left: 0;
-  background: #fff;
+  background: black;  
   position: fixed;
   z-index: 999;
 }
@@ -108,7 +108,7 @@ Author              : EsensiFiksi
   left: 50%;
   top: 50%;
   z-index: 9999;
-} */
+}
 
 .centered {
   display: -webkit-box;
