--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1955,6 +1955,20 @@ body:not(.tt-boxed) .page-header-inner,
   background-color: transparent;
   /* animation: animation_brand 5s infinite linear; */
 }
+#page-header:not(.ph-bg-image).ph-image-cropped .ph-image-inner img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 100% 70%;
+  background-color: transparent;
+  /* animation: animation_brand 5s infinite linear; */
+}
+
 @keyframes animation_brand {
   from {
     transform: rotate(0deg);
