--- a/assets/css/custom1.css
+++ b/assets/css/custom1.css
@@ -65,7 +65,7 @@ Author              : EsensiFiksi
 .spinning {
   width: 100px;
   height: 100px;
-  background: url("../img/AlphaCreative_Border.svg") no-repeat center center;
+  background: url("../img/AlphaCreative_Logo\ \(1\).svg") no-repeat center center;
   border: 0;
   -webkit-animation-name: spin;
   animation-name: spin;
