--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -197,6 +197,8 @@ body {
 
 .ph-title-parallax {
   font-size: 60px !important;
+  width: 50% !important;
+  margin: 0 auto !important;
 }
 .anim-fadeinup {
   font-size: 16px !important;
